Allow resetting board without cutting power to cube

--- a/data/index.html
+++ b/data/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <div id="moveTables"></div>
+    <br>
+    <form action="/reset" method="get">
+        <input type="submit" value="Reset board">
+    </form>
     <script src="index.js"></script>
 </body>
 </html>
